<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.android_driver.ModifyJourneyActivity"
    tools:showIn="@layout/activity_modify_journey">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:paddingBottom="30dp"
            android:layout_gravity="center"
            android:text="Modify Journey"
            android:textSize="20dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modifyjourney_price"
            android:hint="@string/modifyjourneyPrice_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modifyjourney_stop1"
            android:hint="@string/modifyjourneyStop1_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modifyjourney_stop2"
            android:hint="@string/modifyjourneyStop2_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modifyjourney_stop3"
            android:hint="@string/modifyjourneyStop3_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modifyjourney_stop4"
            android:hint="@string/modifyjourneyStop4_hint"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modifyjourney_stop5"
            android:hint="@string/modifyjourneyStop5_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modifyjourney_stop6"
            android:hint="@string/modifyjourneyStop6_hint"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modifyjourney_stop7"
            android:hint="@string/modifyjourneyStop7_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modifyjourney_stop8"
            android:hint="@string/modifyjourneyStop8_hint"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modifyjourney_stop9"
            android:hint="@string/modifyjourneyStop9_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modifyjourney_stop10"
            android:hint="@string/modifyjourneyStop10_hint"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="100dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="modifyJourney"
                android:text="@string/modifyJourney_submit" />
        </LinearLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>