<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="ca.mcgill.ecse321.android_driver.SignupActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:text="User ID: getUserId"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:text=""
            android:textColor="@color/colorAccent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newdriver_name"
            android:hint="@string/newdriverName_hint"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newdriver_model"
            android:hint="@string/newdriverModel_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newdriver_year"
            android:hint="@string/newdriverYear_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newdriver_platenumber"
            android:hint="@string/newdriverPlatenumber_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newdriver_numberseats"
            android:hint="@string/newdriverNumberseats_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="360dp"
        android:orientation="vertical">
        <Button
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/newdriver_submit"
            android:onClick="addDriver"/>
    </LinearLayout>

</RelativeLayout>